20181002
Traceback (most recent call last):
  File "abc.py", line 9, in <module>
    area = radius * radius * 3.14159
TypeError: can't multiply sequence by non-int of type 'str'
------------------------------------------------------------------------------------------------------------------------------------------
 File "abc.py", line 12
    print "The area for the circle of radius", radius, "is", area
                                            ^
SyntaxError: Missing parentheses in call to 'print'
------------------------------------------------------------------------------------------------------------------------------------------
